--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <main>
+        <div class="hide">
+            <p class="win-msg"></p>
+            <button class="button">New Game</button>
+        </div>
         <div class="container">
             <button class="btn"></button>
             <button class="btn"></button>
@@ -19,8 +23,11 @@
             <button class="btn"></button>
             <button class="btn"></button>
             <button class="btn"></button>
+            <button class="btn"></button>
         </div>
+        <button class="button">Reset</button>
     </main>
+    <script src="app.js"></script>
 </body>
 
 </html>
