Add changes in elemets and  responsiveness to the UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="hide">
             <p class="win-msg"></p>
-            <button class="button">New Game</button>
+            <button class="button-Newgame">New Game</button>
         </div>
         <div class="container">
             <button class="btn"></button>
@@ -25,7 +25,7 @@
             <button class="btn"></button>
             <button class="btn"></button>
         </div>
-        <button class="button">Reset</button>
+        <button class="button-Reset">Reset</button>
     </main>
     <script src="app.js"></script>
 </body>
